--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
           sudo docker rm -f backend-container || true
           sudo docker rmi -f backend:1.0.0 || true
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
-          sudo docker run -d -p 3000:3000 --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          sudo docker run -d -p 3000:3000 --name backend-container --env-file ./api/.env ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
         "
   build-frontend:
     runs-on: ubuntu-latest
