--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,9 +28,9 @@ jobs:
           sudo yum update -y
           sudo yum install -y docker
           sudo service docker start
-          sudo docker stop -f backend-container || true
-          sudo docker rm -f backend-container || true
-          sudo docker rmi -f backend:1.0.0 || true
+          sudo docker stop backend-container || true
+          sudo docker rm backend-container || true
+          sudo docker rmi backend:1.0.0 || true
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
           sudo docker run -d -p 3000:3000 --name backend-container --env-file ./api/.env ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
         "
