--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,7 @@ jobs:
           sudo service docker start
           sudo docker stop backend-container || true
           sudo docker rm backend-container || true
+          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ./api/docker.env ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/api/docker.env
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
           sudo docker run -d -p 3000:3000 --name backend-container --env-file ./api/docker.env ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
         "
