--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
         mkdir -p ~/.ssh
         echo "$SSH_KEY" > ~/.ssh/id_rsa | 
         chmod 600 ~/.ssh/id_rsa
-        scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ./api/docker.env ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/api/docker.env
+        scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ./api/docker-env-file ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/api/docker-env-file
         ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} "
           sudo yum update -y
           sudo yum install -y docker
@@ -32,7 +32,7 @@ jobs:
           sudo docker stop backend-container || true
           sudo docker rm backend-container || true
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
-          sudo docker run -d -p 3000:3000 --name backend-container --env-file ./api/docker.env ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          sudo docker run -d -p 3000:3000 --name backend-container --env-file ./api/docker-env-file ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
         "
   build-frontend:
     runs-on: ubuntu-latest
