--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,20 +31,23 @@ jobs:
           sudo service docker start
           sudo docker stop backend-container || true
           sudo docker rm backend-container || true
+          export MONGO_URI=${{ secrets.MONGO_URI}}
+          export JWT_SECRET=${{ secrets.JWT_SECRET }}
+          export GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+          export GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+          export SESSION_SECRET=${{ secrets.SESSION_SECRET }}
+          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          export AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}
+          export AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}
+          export AWS_BUCKET_REGION=${{ secrets.AWS_REGION }}
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
           sudo docker run -d -p 3000:3000 --name backend-container /
           --env MONGO_URI --env JWT_SECRET --env GOOGLE_CLIENT_ID /
           --env GOOGLE_CLIENT_SECRET --env SESSION_SECRET /
           --env AWS_ACCESS_KEY_ID --env AWS_SECRET_ACCESS_KEY /
           --env AWS_SESSION_TOKEN --env AWS_BUCKET_NAME --env AWS_BUCKET_REGION /
-          ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 env | grep MONGO_URI=${{ secrets.MONGO_URI }} /
-          JWT_SECRET=${{ secrets.JWT_SECRET }} GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} /
-          GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} SESSION_SECRET=${{ secrets.SESSION_SECRET }} /
-          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} /
-          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} /
-          AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }} /
-          AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} /
-          AWS_BUCKET_REGION=${{ secrets.AWS_REGION }}
+          ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 env
         "
   build-frontend:
     runs-on: ubuntu-latest
