--- a/deployment/backend-service.yaml
+++ b/deployment/backend-service.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-estate-agent-backend-service
+  name: backend-service
+  labels:
+    app: estate-agent
+    tier: backend
 spec:
   selector:
     app: estate-agent
     tier: backend
   ports:
     - protocol: TCP
-      port: 3000
-      targetPort: 3000
-  type: ClusterIP
-
+      port: 3000  
+      targetPort: 3000 
