--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,77 +1,94 @@
 name: CI/CD Pipeline
+
 on: [push]
+
 jobs:
   build-backend:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name:  build backend docker image
-      run: |
-        docker build -t backend:1.0.0 ./api
-    - name: Loggen uns im Docker Hub ein
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
-    - name: Push backend docker image
-      run: |
-        docker tag backend:1.0.0 ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
-        docker push ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
-    - name: deploy-backend
-      env:
-        SSH_KEY: ${{ secrets.SSH_KEY }}
-      run: |
-        cd api
-        mkdir -p ~/.ssh
-        echo "$SSH_KEY" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} "
-          sudo yum update -y
-          sudo yum install -y docker
-          sudo service docker start
-          sudo docker stop backend-container || true
-          sudo docker rm backend-container || true
-          export MONGO_URI=${{ secrets.MONGO_URI}}
-          export JWT_SECRET=${{ secrets.JWT_SECRET }}
-          export GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-          export GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-          export SESSION_SECRET=${{ secrets.SESSION_SECRET }}
-          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          export AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}
-          export AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}
-          export AWS_BUCKET_REGION=${{ secrets.AWS_REGION }}
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
-          sudo docker run -d -p 3000:3000 --name backend-container \
-          --env MONGO_URI --env JWT_SECRET --env GOOGLE_CLIENT_ID \
-          --env GOOGLE_CLIENT_SECRET --env SESSION_SECRET \
-          --env AWS_ACCESS_KEY_ID --env AWS_SECRET_ACCESS_KEY \
-          --env AWS_SESSION_TOKEN --env AWS_BUCKET_NAME --env AWS_BUCKET_REGION \
-          ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
-        "
+      - uses: actions/checkout@v4
+
+      - name: Build backend docker image
+        run: |
+          docker build -t backend:1.0.0 ./api
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Push backend docker image
+        run: |
+          docker tag backend:1.0.0 ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          docker push ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+
+      - name: Deploy backend
+        env:
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+          MONGO_URI: ${{ secrets.MONGO_URI }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+          AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+          AWS_BUCKET_REGION: ${{ secrets.AWS_REGION }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} "
+            sudo yum update -y
+            sudo yum install -y docker
+            sudo systemctl start docker
+            sudo docker stop backend-container || true
+            sudo docker rm backend-container || true
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+            sudo docker run -d -p 3000:3000 --name backend-container \
+              -e MONGO_URI=${{ secrets.MONGO_URI }} \
+              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
+              -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
+              -e GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
+              -e SESSION_SECRET=${{ secrets.SESSION_SECRET }} \
+              -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+              -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+              -e AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }} \
+              -e AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
+              -e AWS_BUCKET_REGION=${{ secrets.AWS_REGION }} \
+              ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          "
+
   build-frontend:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: install NodeJS
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    - name: Install Frontend Dependencies
-      run: |
-        cd client
-        npm install --force
-    - name: build-frontend
-      run: |
-        cd client
-        npm run build
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        aws-region: ${{ secrets.AWS_REGION }}
-    - name: Deploy Frontend to S3
-      run: aws s3 sync ./client/dist s3://${{ secrets.AWS_S3_BUCKET }} --acl public-read --delete
-      
+      - uses: actions/checkout@v4
+
+      - name: Install NodeJS
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install Frontend Dependencies
+        run: |
+          cd client
+          npm install --force
+
+      - name: Build frontend
+        run: |
+          cd client
+          npm run build
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Deploy Frontend to S3
+        run: |
+          aws s3 sync ./client/dist s3://${{ secrets.AWS_S3_BUCKET }} --acl public-read --delete
