--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,7 +44,7 @@ jobs:
             sudo yum update -y
             sudo yum install -y docker
             sudo systemctl start docker
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
             sudo docker run -d -p 3000:3000 --name backend-container \
               -e MONGO_URI=${{ secrets.MONGO_URI }} \
               -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
