--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,12 +42,7 @@ jobs:
           export AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}
           export AWS_BUCKET_REGION=${{ secrets.AWS_REGION }}
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
-          sudo docker run -d -p 3000:3000 --name backend-container \
-          --env MONGO_URI --env JWT_SECRET --env GOOGLE_CLIENT_ID \
-          --env GOOGLE_CLIENT_SECRET --env SESSION_SECRET \
-          --env AWS_ACCESS_KEY_ID --env AWS_SECRET_ACCESS_KEY \
-          --env AWS_SESSION_TOKEN --env AWS_BUCKET_NAME --env AWS_BUCKET_REGION \
-          ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          sudo docker run -d -p 3000:3000 --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
         "
   build-frontend:
     runs-on: ubuntu-latest
