--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,3 +1,14 @@
+ARG MONGO_URI
+ARG JWT_SECRET
+ARG GOOGLE_CLIENT_ID
+ARG GOOGLE_CLIENT_SECRET
+ARG SESSION_SECRET
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
+ARG AWS_SESSION_TOKEN
+ARG AWS_BUCKET_NAME
+ARG AWS_BUCKET_REGION
+
 # Verwende ein neueres Node.js Basisimage
 FROM node:lts-alpine
 
@@ -13,7 +24,16 @@ RUN npm install
 # Kopiere Anwendungscode
 COPY . .
 
-
+ENV MONGO_URI=$MONGO_URI
+ENV JWT_SECRET=$JWT_SECRET
+ENV GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID
+ENV GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET
+ENV SESSION_SECRET=$SESSION_SECRET
+ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+ENV AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
+ENV AWS_BUCKET_NAME=$AWS_BUCKET_NAME
+ENV AWS_BUCKET_REGION=$AWS_BUCKET_REGION
 
 # Exponiere den Port
 EXPOSE 3000
