--- a/deployment/estate-agent-ingress.yaml
+++ b/deployment/estate-agent-ingress.yaml
@@ -2,25 +2,29 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: estate-agent-ingress
-  namespace: default
 spec:
-  ingressClassName: nginx
+  tls:
+    - hosts:
+      - estate-agent.de
+      secretName: estate-agent.de  
   rules:
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: estate-agent-frontend
-            port:
-              number: 80
-      - path: /api
-        pathType: Prefix
-        backend:
-          service:
-            name: estate-agent-backend
-            port:
-              number: 3000
+    - host: 
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: estate-agent-frontend-service  
+                port:
+                  number: 80  
+          - path: /api
+            pathType: Prefix
+            backend:
+              service:
+                name: estate-agent-backend-service  
+                port:
+                  number: 3000  
+
 
 
