--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
           sudo docker stop backend-container || true
           sudo docker rm backend-container || true
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
-          sudo docker run -d -p 3000:3000 --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          sudo docker run -d --network host --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
         "
   build-frontend:
     runs-on: ubuntu-latest
