--- a/.github/workflows/deploy-ec2-s3.yml
+++ b/.github/workflows/deploy-ec2-s3.yml
@@ -5,33 +5,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name:  build backend docker image
-      run: |
-        docker build -t backend:1.0.0 ./api
-    - name: Loggen uns im Docker Hub ein
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
-    - name: Push backend docker image
-      run: |
-        docker tag backend:1.0.0 ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
-        docker push ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
     - name: deploy-backend
       env:
         SSH_KEY: ${{ secrets.SSH_KEY }}
       run: |
+        cd api
         mkdir -p ~/.ssh
-        echo "$SSH_KEY" > ~/.ssh/id_rsa | 
+        echo "$SSH_KEY" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} "
           sudo yum update -y
           sudo yum install -y docker
-          sudo service docker start
-          sudo docker stop backend-container
-          sudo docker rm backend-container
+          sudo systemctl start docker
+          sudo docker stop backend-container || true
+          sudo docker rm backend-container || true
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
-          sudo docker run -d -p 3000:3000 --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          sudo docker run -d --network host --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          sudo docker images --filter 'dangling=true' --format '{{.ID}}' | xargs -r sudo docker rmi -f
         "
   build-frontend:
     runs-on: ubuntu-latest
