--- a/k8s/backend-service.yaml
+++ b/k8s/backend-service.yaml
@@ -1,16 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-estate-agent-backend-service
-  labels:
-    app: estate-agent
-    tier: backend
+  name: backend-service
+  namespace: default
 spec:
   selector:
-    app: estate-agent
-    tier: backend
+    app: backend
   ports:
     - protocol: TCP
       port: 3000
       targetPort: 3000
-  type: ClusterIP
