--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend
+  namespace: default
 spec:
   selector:
-    app: frontend-deployment   
+    app: frontend
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: ClusterIP
-  
