--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -3,28 +3,24 @@ events {
 }
 http {
     server {
-    listen 80;
-    server_name localhost;
+        listen 80;
+        server_name docker.compose.local;
+        return 301 https://$host$request_uri;
     }
 
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }
+        proxy_buffering off;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
 
-    location / {
-    proxy_buffering off;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port $server_port;
-
-    proxy_pass http://frontend:8080;
+        proxy_pass http://frontend:8080;
     }
     location /api {
         proxy_buffering off;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port
+        proxy_set_header X-Forwarded-Port $server_port;
 
         proxy_pass http://backend:3000;
     }
