--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,27 +2,24 @@ events {
     worker_connections 1024;
 }
 http {
+
     server {
         listen 80;
-        server_name docker.compose.local;
-        return 301 https://$host$request_uri;
+        server_name 127.0.0.1;
 
         location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
             proxy_pass http://frontend:80;
             proxy_buffering off;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
         }
-    }
-
-    location /api {
-        proxy_pass http://backend:3000;
-        proxy_buffering off;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
+        location /api {
+            proxy_pass http://backend:3000/api;
+            proxy_buffering off;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+        }
     }
 }
