--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
 
   backend:
     build: ./api
-    env_file: .env
+    env_file: ./api/.env
     ports:
       - "3000:3000"
 
@@ -19,7 +19,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./client/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - frontend
       - backend
