update docker monogodb

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,27 +5,15 @@ events {
 http {
     server {
         listen 80;
-        server_name docker.compose.local;
-    }
-
-    server {
+        server_name localhost;  # Anpassen Sie den Servernamen entsprechend Ihrer Anwendung
 
         location / {
-        proxy_buffering off;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
+            proxy_buffering off;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
 
-        proxy_pass http://frontend:5173;
-        }
-
-        location /api {
-        proxy_buffering off;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-
-        proxy_pass http://backend:3000/api;
+            proxy_pass http://backend:3000;  # Anpassen der Adresse entsprechend des Dienstnamens und Ports des backend-Dienstes
         }
     }
 }
