--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -5,18 +5,24 @@ FROM node:lts-alpine
 WORKDIR /usr/src/app
 
 # Kopiere package.json und package-lock.json
-COPY package*.json ./
+COPY api/package*.json ./
 
 # Installiere Abhängigkeiten und baue native Module neu
 RUN npm install 
 
 # Kopiere Anwendungscode
-COPY . .
+COPY api/ .
 
 
 # Exponiere den Port
-EXPOSE 3000
+EXPOSE 5000
 
 # Startbefehl für die Anwendung
-CMD ["npm", "start"]
+CMD ["node", "index.js"]
+
+
+
+
+
+
 
