--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -3,10 +3,10 @@ FROM node:lts-alpine as build
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
+COPY client/package.json client/package-lock.json ./
 RUN npm install
 
-COPY . .
+COPY client/ .
 RUN npm run build
 
 # Stage 2: Serve the built frontend application using nginx
@@ -17,9 +17,16 @@ FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 
 
-EXPOSE 5173
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
+
+
+
+
+
+
+
 
 
 
