--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,28 +1,23 @@
-events {
-    worker_connections 1024;
-}
-http {
-    server {
-        listen 80;
-        server_name docker.compose.local;
-        return 301 https://$host$request_uri;
+server {
+    listen 80;
 
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-            proxy_pass http://frontend:80;
-            proxy_buffering off;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-        }
+    server_name localhost;
+
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
     }
 
-    location /api {
+    location /api/ {
         proxy_pass http://backend:3000;
-        proxy_buffering off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
+    }
+
+    error_page 404 /index.html;
+    location = /index.html {
+        internal;
     }
 }
