--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,32 @@
-# docker-compose.yml
-version: "3.8"
+version: '3.8'
+
 services:
   frontend:
-    build: ./client
+    build:
+      context: .
+      dockerfile: Dockerfile.client
     ports:
-      - "5173:80"
+      - "3000:80"
     depends_on:
       - backend
 
   backend:
-    build: ./api
-    env_file: .env
+    build:
+      context: .
+      dockerfile: Dockerfile.api
     ports:
-      - "3000:3000"
-
-  proxy:
-    image: nginx:alpine
-    ports:
-      - 80:80
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - "5000:5000"
+    environment:
+      - DATABASE_URL=mongodb://mongodb:27017/estate-agent
     depends_on:
-      - frontend
-      - backend
+      - mongodb
+
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
