--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,108 +1,25 @@
-name: CI-CD Pipeline
-
-on:
-  push:
-    branches:
-      - master
-
-env:
-  AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-
+name: CI/CD Pipeline
+on: [push]
 jobs:
-  build_frontend:
+  build-backend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-
-      - name: Build frontend
-        run: |
-          cd client
-          npm install
-          npm run build
-          ls -al ./dist  
-
-      - name: Upload frontend artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend
-          path: client/dist
-
-  upload_frontend_to_s3:
-    needs: build_frontend
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download frontend artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend
-          path: client/dist
-
-      - name: Verify downloaded artifacts
-        run: ls -al client/dist  
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-
-      - name: Upload to S3
-        run: |
-          aws s3 cp client/dist s3://$AWS_S3_BUCKET/ --recursive
-
-  build_backend:
-    needs: upload_frontend_to_s3
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        run: |
-          cd api
-          docker build -t estate-agent-backend .
-          docker tag estate-agent-backend:latest $DOCKER_USERNAME/estate-agent-backend:latest
-          docker push $DOCKER_USERNAME/estate-agent-backend:latest
-
-  
-  deploy_backend:
-    needs: build_backend
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.MY_EC2_SSH_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-
-      - name: Deploy to EC2
-        run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ec2-user@${{ secrets.EC2_HOST }} "
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest &&
-          sudo docker run -d -p 3000:3000 --name backend-container ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
-          "
-
-
-           
+    - uses: actions/checkout@v4
+    - name: deploy-backend
+      env:
+        SSH_KEY: ${{ secrets.SSH_KEY }}
+      run: |
+        cd api
+        mkdir -p ~/.ssh
+        echo "$SSH_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.NGINX_EC2 }} "
+          sudo yum update -y
+          sudo yum install -y docker
+          sudo systemctl start docker
+          sudo docker stop backend-container || true
+          sudo docker rm backend-container || true
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.2 &&
+          sudo docker run -d --network host --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.2
+          sudo docker images --filter 'dangling=true' --format '{{.ID}}' | xargs -r sudo docker rmi -f
+        "
