--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,7 +1,7 @@
 name: CI/CD Pipeline
 on: [push]
 jobs:
-  build-backend:
+  build-complete-app:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
