--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,8 @@
 name: CI/CD Pipeline
-on: [push]
+on:
+  push:
+    branches:
+      - deploy-nginx-ec2
 jobs:
   build-complete-app:
     runs-on: ubuntu-latest
@@ -20,6 +23,6 @@ jobs:
           sudo docker stop backend-container || true
           sudo docker rm backend-container || true
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.2 &&
-          sudo docker run -d --network host --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.2
+          sudo docker run -d -p 3000:3000 --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.2
           sudo docker images --filter 'dangling=true' --format '{{.ID}}' | xargs -r sudo docker rmi -f
         "
