--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,8 +1,5 @@
 name: CI/CD Pipeline
-on:
-  push:
-    branches:
-      - deploy/nginx-ec2
+on: [push]
 jobs:
   build-complete-app:
     runs-on: ubuntu-latest
