--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,24 +5,24 @@ FROM node:lts-alpine
 WORKDIR /usr/src/app
 
 # Kopiere package.json und package-lock.json
-COPY api/package*.json ./
+COPY package*.json ./
 
 # Installiere Abhängigkeiten und baue native Module neu
 RUN npm install 
 
 # Kopiere Anwendungscode
-COPY api/ .
+COPY . .
 
 
 # Exponiere den Port
-EXPOSE 5000
+EXPOSE 3000
 
 # Startbefehl für die Anwendung
-CMD ["node", "index.js"]
+CMD ["npm", "start"]
 
 
 
 
-
+              
 
 
