--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,10 +3,10 @@ FROM node:lts-alpine as build
 
 WORKDIR /app
 
-COPY client/package.json client/package-lock.json ./
+COPY package.json package-lock.json ./
 RUN npm install
 
-COPY client/ .
+COPY . .
 RUN npm run build
 
 # Stage 2: Serve the built frontend application using nginx
@@ -17,9 +17,12 @@ FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 
 
-EXPOSE 80
+EXPOSE 5173
 
 CMD ["nginx", "-g", "daemon off;"]
+
+
+
 
 
 
