--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: frontend-service
   namespace: default
 spec:
+  type: LoadBalancer
   selector:
     app: frontend
   ports:
